// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostAttachmentsGenericFiles - Snapshots > matches snapshot with empty array 1`] = `null`;

exports[`PostAttachmentsGenericFiles - Snapshots > matches snapshot with mixed file types containing PDFs 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    class="cursor-auto flex-row items-center justify-between gap-2 rounded-md bg-muted p-4"
    data-testid="click-container"
  >
    <div
      class="flex items-center gap-x-2"
      data-testid="inner-container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text size-6 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <span
        class="font-bold break-all"
        data-size="sm"
        data-testid="typography"
      >
        document.pdf
      </span>
    </div>
    <button
      class="h-8 w-10 shrink-0 border-none bg-card hover:bg-card/70"
      data-aschild="true"
      data-size="icon"
      data-testid="button"
      data-variant="dark"
    >
      <a
        data-override-defaults="true"
        data-testid="link"
        href="https://example.com/document.pdf"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
      </a>
    </button>
  </div>
  <div
    class="cursor-auto flex-row items-center justify-between gap-2 rounded-md bg-muted p-4"
    data-testid="click-container"
  >
    <div
      class="flex items-center gap-x-2"
      data-testid="inner-container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text size-6 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <span
        class="font-bold break-all"
        data-size="sm"
        data-testid="typography"
      >
        report.pdf
      </span>
    </div>
    <button
      class="h-8 w-10 shrink-0 border-none bg-card hover:bg-card/70"
      data-aschild="true"
      data-size="icon"
      data-testid="button"
      data-variant="dark"
    >
      <a
        data-override-defaults="true"
        data-testid="link"
        href="https://example.com/report.pdf"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
      </a>
    </button>
  </div>
</div>
`;

exports[`PostAttachmentsGenericFiles - Snapshots > matches snapshot with multiple PDFs 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    class="cursor-auto flex-row items-center justify-between gap-2 rounded-md bg-muted p-4"
    data-testid="click-container"
  >
    <div
      class="flex items-center gap-x-2"
      data-testid="inner-container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text size-6 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <span
        class="font-bold break-all"
        data-size="sm"
        data-testid="typography"
      >
        report.pdf
      </span>
    </div>
    <button
      class="h-8 w-10 shrink-0 border-none bg-card hover:bg-card/70"
      data-aschild="true"
      data-size="icon"
      data-testid="button"
      data-variant="dark"
    >
      <a
        data-override-defaults="true"
        data-testid="link"
        href="https://example.com/report.pdf"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
      </a>
    </button>
  </div>
  <div
    class="cursor-auto flex-row items-center justify-between gap-2 rounded-md bg-muted p-4"
    data-testid="click-container"
  >
    <div
      class="flex items-center gap-x-2"
      data-testid="inner-container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text size-6 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <span
        class="font-bold break-all"
        data-size="sm"
        data-testid="typography"
      >
        invoice.pdf
      </span>
    </div>
    <button
      class="h-8 w-10 shrink-0 border-none bg-card hover:bg-card/70"
      data-aschild="true"
      data-size="icon"
      data-testid="button"
      data-variant="dark"
    >
      <a
        data-override-defaults="true"
        data-testid="link"
        href="https://example.com/invoice.pdf"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
      </a>
    </button>
  </div>
  <div
    class="cursor-auto flex-row items-center justify-between gap-2 rounded-md bg-muted p-4"
    data-testid="click-container"
  >
    <div
      class="flex items-center gap-x-2"
      data-testid="inner-container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text size-6 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <span
        class="font-bold break-all"
        data-size="sm"
        data-testid="typography"
      >
        contract.pdf
      </span>
    </div>
    <button
      class="h-8 w-10 shrink-0 border-none bg-card hover:bg-card/70"
      data-aschild="true"
      data-size="icon"
      data-testid="button"
      data-variant="dark"
    >
      <a
        data-override-defaults="true"
        data-testid="link"
        href="https://example.com/contract.pdf"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
      </a>
    </button>
  </div>
</div>
`;

exports[`PostAttachmentsGenericFiles - Snapshots > matches snapshot with no PDFs in mixed files 1`] = `null`;

exports[`PostAttachmentsGenericFiles - Snapshots > matches snapshot with single PDF 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    class="cursor-auto flex-row items-center justify-between gap-2 rounded-md bg-muted p-4"
    data-testid="click-container"
  >
    <div
      class="flex items-center gap-x-2"
      data-testid="inner-container"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-file-text size-6 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 9H8"
        />
        <path
          d="M16 13H8"
        />
        <path
          d="M16 17H8"
        />
      </svg>
      <span
        class="font-bold break-all"
        data-size="sm"
        data-testid="typography"
      >
        document.pdf
      </span>
    </div>
    <button
      class="h-8 w-10 shrink-0 border-none bg-card hover:bg-card/70"
      data-aschild="true"
      data-size="icon"
      data-testid="button"
      data-variant="dark"
    >
      <a
        data-override-defaults="true"
        data-testid="link"
        href="https://example.com/document.pdf"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
      </a>
    </button>
  </div>
</div>
`;
